# Data-Driven-Methods

./: .gitignore  README.md  main.py  pyproject.toml
DATA/FLUIDS/ibpm_scripts/: cylinder01.sh  cylinder03.sh  cylinder04.sh  cylinder05.sh
Week1/: week1_exercises.ipynb
Week1/DATA/FLUIDS/: README.txt
Week1/DATA/FLUIDS/ibpm_scripts/: cylinder02.sh
Week3/: lorenz.ipynb
scripts/: fetch_resources.sh
