[project]
name = "data-driven-methods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "keras>=3.13.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tensorflow>=2.20.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
